#
# altpng - a versatile png reading and writing library
# Copyright (c) 2003,2004,2021 Michael Fink
#

## Process this file with automake to produce Makefile.in

AUTOMAKE_opts = gnu

SUBDIRS = lib utils

EXTRA_DIST = \
	.cvsignore \
	autogen.sh \
	doc/altpng-doxygen.h \
	doc/doxygen.cfg \
	win32/.cvsignore \
	win32/altpng.def \
	win32/altpng.dsp \
	win32/altpng.dsw \
	win32/altpng.h \
	win32/altpng_static.dsp \
	win32/config.h \
	win32/Makefile.mingw32 \
	win32/pngmin.dsp \
	win32/pngview.dsp
