#
# d64view - a d64 disk image viewer
# Copyright (c) 2002,2003 Michael Fink
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# automake makefile for top package dir
#
# $Id: Makefile.am,v 1.6 2003/09/08 21:27:34 vividos Exp $
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = source

EXTRA_DIST = \
	autogen.sh \
	COPYING \
	README \
	docs/d64.txt \
	docs/d64view.html \
	docs/d64view.png \
	docs/dev-notes.txt \
	docs/doxygen.cfg \
	linux/d64view.1 \
	win32/build.bat \
	win32/d64.ico \
	win32/d64view.dsp \
	win32/d64view.dsw \
	win32/d64view.ico \
	win32/d64view.mak \
	win32/d64view.nsi \
	win32/d64view_res.rc \
	win32/Makefile.mingw \
	win32/resource.h
