#
# d64view - a d64 disk image viewer
# Copyright (c) 2002,2003,2016 Michael Fink
#
# automake makefile for top package dir
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = source

EXTRA_DIST = \
	autogen.sh \
	COPYING \
	README \
	docs/d64view.html \
	docs/d64view.png \
	docs/dev-notes.txt \
	docs/doxygen.cfg \
	linux/d64view.1 \
	win32/build.bat \
	win32/d64.ico \
	win32/d64view.dsp \
	win32/d64view.dsw \
	win32/d64view.ico \
	win32/d64view.mak \
	win32/d64view.nsi \
	win32/d64view_res.rc \
	win32/Makefile.mingw \
	win32/resource.h
